--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -182,9 +182,7 @@
 
 .timeline-image {
   flex: 0 0 80px;
-  height: 80px;
   border-radius: 10px;
-  overflow: hidden;
   background: rgba(167, 121, 247, 0.1);
 }
 
@@ -192,9 +190,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} 
 
 .timeline-content {
+  padding: 12px;
   flex: 1;
 }
 
@@ -264,12 +263,10 @@
     padding: 20px;
   }
  .timeline-image {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  width: 220px;
-  height: 220px;
-  transform: translate(-50%, -50%);
+  position: fixed;
+
+  width: 350px;
+  height: 320px;
   z-index: -1;
   opacity: 0.4; /* lowered for subtle visibility */
   filter: brightness(0.8) blur(1px); /* softens the image */
