--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
-  box-shadow: 10px 0 8px rgba(0, 0, 0, 0.726);
+  box-shadow: 5px 0 8px rgba(0, 0, 0, 0.266);
   z-index: 100;
 }
 
@@ -139,6 +139,7 @@
     padding: 15px 70px;
     width: 100%;
     text-align: left;
+    
   }
 
   .navbar-links a:hover {
@@ -159,7 +160,7 @@
  
   }
    .navbar{
-    --header-height: 40px;
+    --header-height: 45px;
        height: var(--header-height);
    }
   }
